Fix actions dropdown alignment

--- a/css/less/bbpress.less
+++ b/css/less/bbpress.less
@@ -419,14 +419,14 @@ span.bbp-admin-links a {
 	position: absolute;
 	top: 35px;
 	color: #f3f4f5;
-	left: 492px;
+	left: 480px;
 	font-size: 24px;
 	display: none;
 }
 
 #bbpress-forums ul.bbp-action-links-dropdown {
 	top: 52px;
-	left: 474px;
+	left: 463px;
 	background: #f3f4f5;
 	position: absolute;
 	padding: 5px 20px;
